--- a/pkgbuild/PKGBUILD
+++ b/pkgbuild/PKGBUILD
@@ -10,7 +10,7 @@ pkgver=$(date +%y.%m.%d)
 pkgrel=$(date +%H%M)
 arch=('any')
 license=('GPL3')
-url="https://github.com/biglinux/$_pkgname"
+url="https://github.com/biglinux/$pkgname"
 provides=("libaidwaita-kvantum")
 source=("git+${url}.git")
 md5sums=('SKIP')
