try fix pkgname

--- a/pkgbuild/PKGBUILD
+++ b/pkgbuild/PKGBUILD
@@ -21,9 +21,9 @@ elif [ -e "pkgbuild.install" ];then
 fi
 
 package() {
-    cd $_pkgname/src
+    cd $pkgname/src
     install -d "$pkgdir"/usr/share/Kvantum/
-    cp -r $_pkgname "$pkgdir"/usr/share/Kvantum
+    cp -r $pkgname "$pkgdir"/usr/share/Kvantum
     cp -r BigAdwaitaRound "$pkgdir"/usr/share/Kvantum
     mkdir -p "$pkgdir/usr/lib/qt6/plugins/org.kde.kdecoration2.kcm/klassydecoration/presets/"
     cp Klassy/BigAdwaitaRound.klpw "$pkgdir/usr/lib/qt6/plugins/org.kde.kdecoration2.kcm/klassydecoration/presets/"
