--- a/pkgbuild/PKGBUILD
+++ b/pkgbuild/PKGBUILD
@@ -10,7 +10,7 @@ pkgver=$(date +%y.%m.%d)
 pkgrel=$(date +%H%M)
 arch=('any')
 license=('GPL3')
-url="https://github.com/biglinux/$pkgname"
+url="https://github.com/biglinux/_$pkgname"
 provides=("libaidwaita-kvantum")
 source=("git+${url}.git")
 md5sums=('SKIP')
@@ -21,9 +21,9 @@ elif [ -e "pkgbuild.install" ];then
 fi
 
 package() {
-    cd $pkgname/src
+    cd $_pkgname/src
     install -d "$pkgdir"/usr/share/Kvantum/
-    cp -r $pkgname "$pkgdir"/usr/share/Kvantum
+    cp -r $_pkgname "$pkgdir"/usr/share/Kvantum
     cp -r BigAdwaitaRound "$pkgdir"/usr/share/Kvantum
     mkdir -p "$pkgdir/usr/lib/qt6/plugins/org.kde.kdecoration2.kcm/klassydecoration/presets/"
     cp Klassy/BigAdwaitaRound.klpw "$pkgdir/usr/lib/qt6/plugins/org.kde.kdecoration2.kcm/klassydecoration/presets/"
